// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|LoaderWrapper custom no data 1`] = `
.c0 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      No projects
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper loaded 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "color": "white",
        }
      }
    >
      <h1>
        Test
      </h1>
      <h2>
        Ut elementum ex nulla
      </h2>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec pulvinar est.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper loading 1`] = `
.c0 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <span>
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper no data 1`] = `
.c0 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      <span>
        No Data Found.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|LoaderWrapper with error 1`] = `
.c0 {
  color: #f21e29;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className=""
  >
    <div
      className="c0"
    >
      Some error
    </div>
  </div>
</div>
`;
